fix: increase `z-index` on `ConfirmModal`

--- a/src/components/modals/confirm-modal/confirm-modal.module.css
+++ b/src/components/modals/confirm-modal/confirm-modal.module.css
@@ -5,7 +5,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 50;
+	z-index: 100;
 	color: #fafafa;
 	padding: 75px 0;
 }
